<resources>
    <string name="app_name">Mach\'INSA laver</string>
    <string name="title_home">Home</string>
    <string name="title_recharger">Recharger</string>
    <string name="title_residences">Résidences</string>
    <string name="title_profil">Profil</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings pour le fragment Recharger -->
    <string name="votre_solde">Votre solde :</string>
    <string name="choisir_un_mode">Choisir un mode de rechargement</string>
    <string name="carte">Carte Bancaire</string>
    <string name="compte">Compte Bancaire</string>
    <string name="paypal">Paypal</string>
    <string name="prix">Prix</string>
    <string name="prixVA">Prix pour les adhérents V.A. : 2.00€</string>
    <string name="prixNONVA">Prix pour les non adhérents  : 5.00€</string>
    <string name="identifiant">Identifiant CAS</string>
    <string name="ex_identifiant">ex: prenard</string>
    <string name="mdp">Mot de passe</string>
    <string name="ex_mdp">********</string>

    <!-- Strings pour le fragment Profil -->
    <string name="mon_compte">Mon Compte</string>
    <string name="nom">Nom :</string>
    <string name="prenom">Prénom :</string>
    <string name="naissance">Date de naissance :</string>
    <string name="email">Adresse e-mail :</string>
    <string name="telephone">Numéro de tél. :</string>
    <string name="carteVA">Carte VA</string>
    <string name="modes_de_paiement">Modes de paiement</string>
    <string name="deconnexion">Déconnexion</string>

    <!-- Strings pour le Activity Modes de paiement -->
    <string name="numeroCB">N° CB :</string>
    <string name="dateExpiration">Date d\'expiration :</string>
    <string name="cvv">CVV :</string>
    <string name="modifier">Modifier</string>
    <string name="valider">Valider</string>
    <string name="sauvegarder">Sauvegarder cette carte banquaire comme nouveau mode de paiement</string>

    <string name="saisir_montant">Saisir montant :</string>

</resources>
