<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prix"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:background="@color/colorPrimary"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/tv_prixVA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:text="@string/prixVA" />

    <TextView
        android:id="@+id/tv_prixNONVA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:text="@string/prixNONVA" />

</LinearLayout>