<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.RechargerFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/votre_solde"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"/>

        <ImageButton
            android:id="@+id/button_info"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_margin="5dp"
            android:src="@drawable/ic_info_outline_black_24dp"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <TextView
        android:id="@+id/solde"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="4.00€"
        android:textSize="30sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/choisir_un_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choisir_un_mode"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_margin="5dp"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_recharger_cb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:drawableStart="@drawable/ic_credit_card_white_24dp"
                android:text="@string/carte" />

            <Button
                android:id="@+id/button_compte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:drawableStart="@drawable/ic_account_balance_white_24dp"
                android:text="@string/compte" />

            <Button
                android:id="@+id/button_paypal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:drawableStart="@drawable/ic_paypal_24dp"
                android:text="@string/paypal" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>