<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".fragments.RechargerFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/votre_solde"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_solde"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:textSize="30sp" />

    <ImageButton
        android:id="@+id/button_editer_cb"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="end"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_mode_edit_black_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider_profil"
        android:orientation="vertical"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_titre_numeroCB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/numeroCB"
                android:textSize="@dimen/texte_profil" />

            <HorizontalScrollView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_numeroCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textSize="@dimen/texte_profil" />
            </HorizontalScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_titre_dateExpiration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dateExpiration"
                android:textSize="@dimen/texte_profil" />

            <TextView
                android:id="@+id/tv_dateExpiration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:textSize="@dimen/texte_profil" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="50dp"
        android:text="@string/saisir_montant"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_montant"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="8"
            android:hint="0.00"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/button_valider_rechargement"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_done_black_50dp" />
    </LinearLayout>

</LinearLayout>